 * build: nss: use nss pkcs11.h, thanks to Fabrice Fontaine.
 * build: windows: checksum in PE, thanks to Simon Rozman.
 * build: windows: support openssl-1.1.1, thanks to Lev Stipakov.
 * mbed: require >=mbedtls-2, mbed dropped polarssl compatibility,
   thanks to Uipko Berghuis
 * certificate: add methods accept full mechanism, thanks to Selva Nair.
 * core: load provider library as private.
 * core: add pkcs11h_initializeProvider, pkcs11h_registerProvider,
   pkcs11h_setProviderProperty, pkcs11h_setProviderPropertyByName to
   support adding properties without breaking API thanks to Михалицын Петр.
 * core: add initialization arguments property, thanks for Михалицын Петр.

2020-11-17 - Version 1.27

 * core: handle PIN expiration after C_Login as C_Login may take a while
 * core: return explicit success when plugin&play and no threading and no
   safefork, thanks to Tunnelblick

2020-01-21 - Version 1.26

 * openssl: build with openssl ec disabled
 * openssl: support RSA_NO_PADDING padding, thanks to Selva Nair
 * core: reduce mutex lock scope of add/remove provider, thanks to Frank Morgner
 * core: improve the fork fixup sequence

2018-08-16 - Version 1.25.1

 * core: build with threading disabled

2018-08-04 - Version 1.25

 * core: do not attempt to initialize provider with fork mode is not safe. Too
   many providers do not follow the PKCS#11 spec.

2018-06-15 - Version 1.24

 * build: support libressl-2.7

2018-06-02 - Version 1.23

 * build: cleanups.
 * openssl: rework support 1.1.

2017-02-12 - Version 1.22

 * spec: minor cleanups.

2017-01-06 - Version 1.21

 * mbedtls: fix missing logic if issur certificate, thanks to Steffan Karger

2016-12-08 - Version 1.20

 * polarssl: support polarssl-1.3, thanks to Steffan Karger.
 * certificate: ignore certificate object without CKA_ID.
 * openssl: fix memory leak, thanks to ASPj.
 * openssl: support 1.1 and libressl, thanks to Daiki Ueno.

2013-10-11 - Version 1.11

 * openssl: support generic pkey.